--- a/src/shop-list.html
+++ b/src/shop-list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shop-list</title>
+    <title>Book</title>
     <!-- Favicon -->
     <link rel="icon" href="./images/favicon/favicon.png" sizes="any" />
     <!-- base styles -->
